# Navier_Stokes_Spectral_Method

./: CMakeLists.txt  LICENSE.md  Makefile  README.md  fpm.toml
app/: main.f90
doc/: index.html
doc/French/: Kelvin_Helmholtz.md  Taylor_Green.md  démonstration_NS.md  methode_pseudo_spectrale.md  méthode_pseudo_spectrale.md  vortex.md
docs/: index.html
docs/English/: Kelvin_Helmholtz.md  Pseudo_Spectral_method.md  Taylor_Green.md  demonstration_NS.md  vortex.md
docs/French/: Kelvin_Helmholtz.md  README.md  Taylor_Green.md  demonstration_NS.md  démonstration_NS.md  methode_pseudo_spectrale.md  vortex.md
src/: Common_Module.f90  Fields_Module.f90  GUI_Module.f90  IO_Module.f90  Initialization_Page.f90  Navier_Stokes_simulation.f90  Simulation_Page.f90  Types_Module.f90  Visualization_Module.f90  animation_page.f90  global_widgetsNS.f90  handlers.f90  initialization.f90  mod_type.f90
